@startuml
' Definición de la interfaz InformacionRopa
interface InformacionRopa {
    +mostrarInfo(): void
}

' Definición de la clase abstracta Ropa
abstract class Ropa {
    -estilo: String
    -color: String
    +getEstilo(): String
    +getColor(): String
}

' Definición de las clases que implementan InformacionRopa
class Camiseta {
    +mostrarInfo(): void
}

class Pantalon {
    +mostrarInfo(): void
}

class Zapatos {
    +mostrarInfo(): void
}

' Definición de la clase Armario
class Armario {
    -camisetas: Ropa[]
    -pantalones: Ropa[]
    -zapatos: Ropa[]
    -camisetaSeleccionada: Ropa
    -pantalonSeleccionado: Ropa
    -zapatosSeleccionados: Ropa
    -random: Random
    -scanner: Scanner
    +mostrarMenu(): void
    +main(String[] args): void
}

' Relaciones entre las clases
InformacionRopa <|.. Ropa : implementa
Ropa <|-- Camiseta
Ropa <|-- Pantalon
Ropa <|-- Zapatos

Armario --> Ropa : contiene


@enduml